# MiOS

./: .gitignore  .nvimlog  Cargo.toml  README.md  mios.code-workspace  x86_64-mios.json
.cargo/: config.toml
.github/workflows/: rust.yml
src/: allocator.rs  commands.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
src/vga_buffer/: chars.rs  mod.rs  writer.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
